[gd_scene load_steps=23 format=3 uid="uid://m34j0d072yu"]

[ext_resource type="Script" uid="uid://7o2tnedpxxgf" path="res://canvas_layer.gd" id="1_ss13m"]
[ext_resource type="Script" uid="uid://7pkjbe783k6e" path="res://life_bars.gd" id="2_bk45p"]
[ext_resource type="Texture2D" uid="uid://bpmneglwwmo7l" path="res://Sprites/LifeBarLibu/BIGLifeBarLibu.png" id="2_lpgtc"]
[ext_resource type="Texture2D" uid="uid://cqngeokh5sqxf" path="res://Sprites/LifeBarLibu/BIGLifeBarLibuHurt1.png" id="3_rw0w2"]
[ext_resource type="Texture2D" uid="uid://fhb8wcdqdtls" path="res://Sprites/LifeBarLibu/LifeBarLibuDead.png" id="4_43ok1"]
[ext_resource type="Texture2D" uid="uid://conwelfe0d70f" path="res://Sprites/LifeBarSoul/SoulLifeBar1.png" id="5_36b3b"]
[ext_resource type="Texture2D" uid="uid://bwk16ptphd0rm" path="res://Sprites/LifeBarSoul/SoulLifeBar.png" id="6_ylig3"]
[ext_resource type="Texture2D" uid="uid://bnxuod3pa6cp1" path="res://Sprites/MIRABIG.png" id="7_yoqr2"]
[ext_resource type="Texture2D" uid="uid://da7pbxcbxhw0m" path="res://Sprites/LifeBarVanessa/VanessaLifeBarBIG.png" id="8_w8otu"]
[ext_resource type="Texture2D" uid="uid://b8qhiyf0k87pc" path="res://Sprites/LifeBarVanessa/VanessaLifeBar1BIG.png" id="9_7duah"]
[ext_resource type="Texture2D" uid="uid://dnlgwcox4qyct" path="res://Sprites/LifeBarVanessa/VanessaLifeBar2BIG.png" id="10_k52l8"]
[ext_resource type="Texture2D" uid="uid://c2ujxnb18qffl" path="res://Sprites/LifeBarVanessa/VanessaLifeBar3BIG.png" id="11_ewrl8"]
[ext_resource type="Texture2D" uid="uid://b5wb88eej1dpf" path="res://Sprites/LifeBarVanessa/VanessaLifeBar4BIG.png" id="12_8myq7"]
[ext_resource type="FontFile" uid="uid://cegsd0hghaxhm" path="res://font/Good Matcha.otf" id="13_on6oe"]
[ext_resource type="Texture2D" uid="uid://dpg1ox2uxwmst" path="res://Sprites/Inventory/InventoryBigSlot1.png" id="14_w8doh"]
[ext_resource type="Texture2D" uid="uid://c813urd1cdt7h" path="res://Sprites/Inventory/Solid_white_bordered.png" id="15_qkkqx"]
[ext_resource type="Script" uid="uid://bmtfo62f41b32" path="res://inventory.gd" id="15_x5duh"]
[ext_resource type="Texture2D" uid="uid://doovt5gp1j5aa" path="res://Sprites/Inventory/InventoryBigSlot2.png" id="16_yk5p3"]
[ext_resource type="Texture2D" uid="uid://bllec5dhvlqqo" path="res://Sprites/Inventory/InventoryBigSlot3.png" id="17_qnx3v"]
[ext_resource type="Texture2D" uid="uid://djgo5voop2fjx" path="res://Sprites/Inventory/InventoryBigSlot4.png" id="18_8yyhk"]
[ext_resource type="Texture2D" uid="uid://cflggtvu2k12s" path="res://Sprites/Inventory/InventoryBigsmall.png" id="19_u0gdo"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_qh00q"]
light_mode = 1

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ss13m")

[node name="LifeBars" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_bk45p")

[node name="LifeBar_Libu" type="Control" parent="LifeBars"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HUD_Life_Full_Libu" type="Sprite2D" parent="LifeBars/LifeBar_Libu"]
z_index = 2
texture_filter = 1
position = Vector2(150, 100)
texture = ExtResource("2_lpgtc")

[node name="HUD_Life_Hurt_Libu" type="Sprite2D" parent="LifeBars/LifeBar_Libu"]
texture_filter = 1
position = Vector2(150, 100)
texture = ExtResource("3_rw0w2")

[node name="HUD_Life_Dead_Libu" type="Sprite2D" parent="LifeBars/LifeBar_Libu"]
texture_filter = 1
position = Vector2(150, 100)
texture = ExtResource("4_43ok1")

[node name="LifeBar_Vanessa" type="Control" parent="LifeBars"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HUD_Life_Full_Vanessa" type="Sprite2D" parent="LifeBars/LifeBar_Vanessa"]
z_index = 1
texture_filter = 1
position = Vector2(195, 100)
texture = ExtResource("8_w8otu")

[node name="HUD_Life_Hurt_Vanessa" type="Sprite2D" parent="LifeBars/LifeBar_Vanessa"]
texture_filter = 1
position = Vector2(195, 100)
texture = ExtResource("9_7duah")

[node name="HUD_Life_Hurt2_Vanessa" type="Sprite2D" parent="LifeBars/LifeBar_Vanessa"]
texture_filter = 1
position = Vector2(195, 100)
texture = ExtResource("10_k52l8")

[node name="HUD_Life_Hurt3_Vanessa" type="Sprite2D" parent="LifeBars/LifeBar_Vanessa"]
texture_filter = 1
position = Vector2(195, 100)
texture = ExtResource("11_ewrl8")

[node name="HUD_Life_Dead_Vanessa" type="Sprite2D" parent="LifeBars/LifeBar_Vanessa"]
texture_filter = 1
position = Vector2(195, 100)
texture = ExtResource("12_8myq7")

[node name="LifeBar_Soul" type="Control" parent="LifeBars"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HUD_Life_Dead_Soul" type="Sprite2D" parent="LifeBars/LifeBar_Soul"]
position = Vector2(150, 100)
texture = ExtResource("5_36b3b")

[node name="HUD_Life_Full_Soul" type="Sprite2D" parent="LifeBars/LifeBar_Soul"]
z_index = 2
texture_filter = 1
position = Vector2(150, 100)
texture = ExtResource("6_ylig3")

[node name="CrossHair" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.51
anchor_top = 0.519
anchor_right = 0.51
anchor_bottom = 0.519
offset_left = -39.2001
offset_top = -40.5201
offset_right = 0.799927
offset_bottom = -0.520081
grow_horizontal = 2
grow_vertical = 2

[node name="Mira" type="TextureRect" parent="CrossHair"]
visible = false
layout_mode = 0
offset_left = -36.0
offset_top = -38.0
offset_right = 36.0
offset_bottom = 34.0
texture = ExtResource("7_yoqr2")
expand_mode = 1

[node name="Dialog" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogBackground" type="ColorRect" parent="Dialog"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = 861.0
offset_right = 1927.0
offset_bottom = 1083.0
color = Color(0, 0, 0, 0.231373)

[node name="DialogLabel" type="Label" parent="Dialog/DialogBackground"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 14.0
offset_right = 154.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("13_on6oe")
theme_override_font_sizes/font_size = 50
text = "Teste"

[node name="Inventory" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("15_x5duh")

[node name="InventoryRect" type="ColorRect" parent="Inventory"]
z_as_relative = false
layout_mode = 0
offset_right = 1927.0
offset_bottom = 1077.0
color = Color(0, 0, 0, 0.27451)

[node name="VBoxContainer" type="GridContainer" parent="Inventory"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 827.0
offset_top = 407.0
offset_right = 1053.0
offset_bottom = 633.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="TextureRect" type="TextureRect" parent="Inventory/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("14_w8doh")

[node name="Item" type="TextureRect" parent="Inventory/VBoxContainer/TextureRect"]
layout_mode = 0
offset_left = 13.0
offset_top = 13.0
offset_right = 107.0
offset_bottom = 107.0

[node name="Highlight" type="TextureRect" parent="Inventory/VBoxContainer/TextureRect"]
modulate = Color(1, 1, 1, 0.352941)
self_modulate = Color(0.45098, 0.980392, 0.937255, 0.941176)
show_behind_parent = true
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 108.0
offset_bottom = 108.0
texture = ExtResource("15_qkkqx")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Inventory/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("16_yk5p3")

[node name="Item" type="TextureRect" parent="Inventory/VBoxContainer/TextureRect2"]
layout_mode = 0
offset_left = 4.0
offset_top = 13.0
offset_right = 98.0
offset_bottom = 107.0

[node name="Highlight" type="TextureRect" parent="Inventory/VBoxContainer/TextureRect2"]
modulate = Color(1, 1, 1, 0.352941)
self_modulate = Color(0.45098, 0.980392, 0.937255, 0.941176)
show_behind_parent = true
layout_mode = 0
offset_left = 3.0
offset_top = 12.0
offset_right = 99.0
offset_bottom = 108.0
texture = ExtResource("15_qkkqx")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Inventory/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("17_qnx3v")

[node name="Item" type="TextureRect" parent="Inventory/VBoxContainer/TextureRect3"]
layout_mode = 0
offset_left = 13.0
offset_top = 4.0
offset_right = 107.0
offset_bottom = 99.0

[node name="Highlight" type="TextureRect" parent="Inventory/VBoxContainer/TextureRect3"]
modulate = Color(1, 1, 1, 0.352941)
self_modulate = Color(0.45098, 0.980392, 0.937255, 0.941176)
show_behind_parent = true
layout_mode = 0
offset_left = 12.0
offset_top = 3.0
offset_right = 108.0
offset_bottom = 99.0
texture = ExtResource("15_qkkqx")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="Inventory/VBoxContainer"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("18_8yyhk")

[node name="Item" type="TextureRect" parent="Inventory/VBoxContainer/TextureRect4"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 98.0
offset_bottom = 98.0

[node name="Highlight" type="TextureRect" parent="Inventory/VBoxContainer/TextureRect4"]
modulate = Color(1, 1, 1, 0.352941)
self_modulate = Color(0.45098, 0.980392, 0.937255, 0.941176)
show_behind_parent = true
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 99.0
offset_bottom = 99.0
texture = ExtResource("15_qkkqx")
expand_mode = 1

[node name="Hotbar" type="HBoxContainer" parent="Inventory"]
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1880.0
offset_right = 1880.0
grow_horizontal = 0

[node name="Slot" type="Control" parent="Inventory/Hotbar"]
visibility_layer = 3
layout_mode = 2

[node name="Item" type="TextureRect" parent="Inventory/Hotbar/Slot"]
visibility_layer = 3
z_index = 2
material = SubResource("CanvasItemMaterial_qh00q")
layout_mode = 2
offset_left = -173.0
offset_top = 63.0
offset_right = -80.0
offset_bottom = 157.0

[node name="Background" type="TextureRect" parent="Inventory/Hotbar/Slot"]
z_as_relative = false
layout_mode = 2
offset_left = -186.0
offset_top = 50.0
offset_right = -66.0
offset_bottom = 170.0
texture = ExtResource("19_u0gdo")

[node name="Highlight" type="TextureRect" parent="Inventory/Hotbar/Slot"]
modulate = Color(1, 1, 1, 0.352941)
self_modulate = Color(0.45098, 0.980392, 0.937255, 0.941176)
show_behind_parent = true
layout_mode = 0
offset_left = -174.0
offset_top = 62.0
offset_right = -78.0
offset_bottom = 159.0
texture = ExtResource("15_qkkqx")
expand_mode = 1
